--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section class="container-sm position-absolute top-50">
         <div class="card mx-auto" style="width: 18rem;">
-            <img src="./image/download.jpeg" class="card-img-top" alt="...">
+            <img src="./download.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text">Ugh, I KNOW I messed up bad and I'm SO sorry. I literally feel so ashamed right now and I can not express it in words and this is the reason that I have created this page. Is
                     there any chance we can just rewind and go back to how things were before? Pleseee Pleaaasseee Faaa Tiii Maahhh?????? </p>
